<resources>
    <string name="app_name">أرابياتا</string>
    <string name="email">البريد الالكترونى</string>
    <string name="password">كلمة السر</string>
    <string name="login">تسجيل دخول</string>
    <string name="next">التالى</string>
    <string name="name">الأسم</string>
    <string name="phone">رقم الهاتف</string>
    <string name="visit">عدد مرات الزياره</string>
    <string name="comment">تعليق</string>
    <string name="thank_you">ِشكراً لك</string>
    <string name="Done">تم</string>
    <string name="validemail">من فضلك أدخل بريد الالكترونى صحيح</string>
    <string name="validpassword">من فضلك أدخل كلمه مرور صحيحه</string>
    <string name="missing">من فضلك أدخل المطلوب</string>
    <string name="change_lang">تغير اللغه</string>
    <string name="logout">تسجيل خروج</string>
    <string name="wrong_login">خطأ فى كلمة المرور أو البريد الالكترونى</string>
    <string name="right_login">تم التسجيل بنجاح</string>
    <string name="lang">ar</string>
    <string name="jan">يناير</string>
    <string name="feb">فبراير</string>
    <string name="march">مارس</string>
    <string name="april">ابريل</string>
    <string name="may">مايو</string>
    <string name="june">يونيو</string>
    <string name="july">يوليو</string>
    <string name="aug">اغسطس</string>
    <string name="sept">سبتمبر</string>
    <string name="oct">أكتوبر</string>
    <string name="nov">نوفمبر</string>
    <string name="dec">ديسمبر</string>
    <string name="chartTittle">"تقييم آراء  الزبائن "</string>
    <string name="months">الشهور</string>
    <string name="NumberofUsers">عدد الزبائن</string>
    <string name="unhappy">غير سعيد</string>
    <string name="happy">سعيد</string>
    <string name="vs">مقابل</string>
    <string name="AllBranches">كل الفروع</string>
    <string name="my_notification">أشعارات</string>
    <string name="commentnoti">أشعار</string>
    <string name="in">في</string>
    <string name="survey">إستطلاع رأى</string>
    <string name="cancel">إلغاء</string>
    <string name="rating">تم التسجيل بنجاح</string>

    <string name="daily">يومياً</string>
    <string name="weekly">إسبوعياً</string>
    <string name="monthly">شهرياً</string>
    <string name="rarely">نادراً</string>
    <string name="is">يكون</string>
    <string name="noti">"تحقق من تطبيق أرابياتا "</string>
    <string name="channel_name">شانل نيم</string>
    <string name="channel_description">شانل ديسكربشن</string>
    <string name="batterylevel">بطاريتك</string>
    <string name="validmobile">من فضلك أدخل رقم هاتف صحيح</string>

    <string name="ok">موافق</string>
    <string name="To">نهايه الفتره</string>
    <string name="markyourdate">بدايه الفتره</string>
    <string name="pleasechoosedateinthefirstcalender">من فضلك اختر الوقت في كل تقويم</string>


</resources>
<!--<resources>-->
    <!--<string name="app_name">Arabiata</string>-->
    <!--<string name="email">Email</string>-->
    <!--<string name="password">Password</string>-->
    <!--<string name="login">Login</string>-->
    <!--<string name="next">Next</string>-->
    <!--<string name="name">Name</string>-->
    <!--<string name="phone">Phone</string>-->
    <!--<string name="visit">Number of visits</string>-->
    <!--<string name="comment">Comment</string>-->
    <!--<string name="thank_you">Thank you</string>-->
    <!--<string name="Done">Done</string>-->
    <!--<string name="jan">January</string>-->
    <!--<string name="feb">February</string>-->
    <!--<string name="march">March</string>-->
    <!--<string name="april">April</string>-->
    <!--<string name="may">May</string>-->
    <!--<string name="june">June</string>-->
    <!--<string name="july">July</string>-->
    <!--<string name="aug">August</string>-->
    <!--<string name="sept">September</string>-->
    <!--<string name="oct">October</string>-->
    <!--<string name="nov">November</string>-->
    <!--<string name="dec">December</string>-->
    <!--<string name="chartTittle">Users Reviews on Arabiata</string>-->
    <!--<string name="months">Months</string>-->
    <!--<string name="NumberofUsers">Number Of Users</string>-->
    <!--<string name="unhappy">unhappy</string>-->
    <!--<string name="happy">Happy</string>-->
    <!--<string name="validemail">Please Enter Valid Email</string>-->
    <!--<string name="validpassword">Please Enter Password</string>-->
    <!--<string name="missing">Please Enter Missing Values</string>-->
    <!--<string name="vs">VS</string>-->
    <!--<string name="AllBranches">All Branches</string>-->
    <!--<string name="change_lang">Change language</string>-->
    <!--<string name="logout">Log out</string>-->
    <!--<string name="wrong_login">Wrong Email or Password</string>-->
    <!--<string name="right_login">Login Successfully</string>-->
    <!--<string name="lang">eng</string>-->
    <!--<string name="survey">Survey</string>-->
    <!--<string name="cancel">Cancel</string>-->
    <!--<string name="rating">Set Rating Successfully</string>-->
    <!--<string name="daily">Daily</string>-->
    <!--<string name="weekly">Weekly</string>-->
    <!--<string name="monthly">Monthly</string>-->
    <!--<string name="rarely">Rarely</string>-->
    <!--<string name="my_notification">Notifications</string>-->
    <!--<string name="commentnoti">NotificationField</string>-->
    <!--<string name="in">In</string>-->
    <!--<string name="is">Is</string>-->
    <!--<string name="noti">Check Arabiata</string>-->
    <!--<string name="channel_name">Channel Name</string>-->
    <!--<string name="channel_description">Channel Description</string>-->
    <!--<string name="batterylevel">Your Battery Is</string>-->
    <!--<string name="validmobile">Please enter valid mobile number</string>-->
    <!--<string name="markyourdate">Mark Your Date</string>-->
    <!--<string name="To">Ending Period</string>-->
    <!--<string name="ok">Ok</string>-->
    <!--<string name="pleasechoosedateinthefirstcalender">Please Choose date in the First Calender!</string>-->

<!--</resources>-->