<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_padding_horizonta">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/thumbnail_noti"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_marginEnd="@dimen/padding_10"
        android:background="@drawable/bell" />

    <LinearLayout
        android:id="@+id/linearnoti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/thumbnail_noti"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvnoti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:text="@string/commentnoti"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/iv_noti_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="5sp"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/in" />

            <TextView
                android:id="@+id/tv_branch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginLeft="10sp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:text="@string/is"
                android:textColor="@color/item_name"
                android:textSize="@dimen/name"
                android:textStyle="bold" />
        </LinearLayout>


        <TextView
            android:id="@+id/tvuserphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:text="user Phone"
            android:textColor="@color/item_name"
            android:textSize="@dimen/name" />

    </LinearLayout>


    <TextView
        android:id="@+id/timestamp_noti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearnoti"
        android:layout_marginTop="9dp"
        android:layout_toEndOf="@+id/thumbnail_noti"
        android:maxLines="1"
        android:text="Created at"
        android:textColor="#545050"
        android:textSize="@dimen/timestamp" />

</RelativeLayout>