<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:keepScreenOn="true"
    tools:context=".Login.LoginActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <TextView
            android:id="@+id/tv_check_connection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:gravity="center"
            android:padding="25dp"
            android:text="الاتصال متاح !"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/iv_logo_login"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:src="@drawable/arabiata__logo" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_below="@+id/iv_logo_login"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />


        <com.subhrajyoti.passwordview.PasswordView
            android:id="@+id/et_password"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_below="@+id/et_email"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"

            android:layout_marginBottom="20dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_login"
            style="@style/Button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_password"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/login"
            android:textStyle="bold" />


</RelativeLayout>
    </ScrollView>